compiler/testData/diagnostics/tests/incompleteCode/dontReportFunctionDeclarationWithNoNameOnFunctionsWithoutFunKeyword.kt
// ISSUE: KT-13741

class Foo {
    <!SYNTAX!>bar<!> <!FUNCTION_DECLARATION_WITH_NO_NAME!><!SYNTAX!><!>{
    }<!>
}
